feat: :sparkles: Add modules
adding modules for each entity

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:restart-app": "docker restart app",
+    "migration:create": "typeorm migration:create src/migrations/$npm_config_name"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
@@ -31,12 +33,15 @@
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "brazilian-values": "^0.13.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
     "joi": "^17.13.1",
+    "jsonapi-serializer": "^3.6.9",
+    "lodash": "^4.17.21",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
@@ -49,6 +54,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonapi-serializer": "^3.6.8",
     "@types/node": "^20.12.11",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
