fix: :bug: New typeorm structure
add a new typeorm path structure, separating migrations and providers

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:restart-app": "docker restart app",
-    "migration:create": "typeorm migration:create src/migrations/$npm_config_name"
+    "migration:create": "typeorm migration:create src/typeorm/migrations/$npm_config_name"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
