--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,18 @@ services:
     networks:
       - app-network
 
+  test:
+    image: node:19-alpine
+    container_name: test
+    working_dir: /home/node/app
+    command: sh -c "npm test && npm run test:e2e"
+    volumes:
+      - .:/home/node/app
+    depends_on:
+      - app
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
